# EyeTracking

./: .gitignore  BOUNDING_BOX_IMPROVEMENTS.md  CALIBRATION-Phase01.md  CALIBRATION-Phase02.md  CALIBRATION-Phase03.md  CALIBRATION-Phase04.md  CALIBRATION-Phase05.md  CALIBRATION-Phase06.md  CALIBRATION-Phase07.md  CALIBRATION-Phase1.md  CALIBRATION.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT_SESSION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  TEST_PLAN.md  TEST_RESULTS.md  TODO-old.md  TODO.md  TOOLSNLIBS.md
.claude/: settings.local.json
core/: BUILD_GUIDE.md  CMakeLists.txt  DEPENDENCIES.md  ONNX_RUNTIME_INTEGRATION.md  RESOURCES.md  build.sh  test_models.cpp  test_real_image.cpp
core/cmake/: toolchain-android.cmake  toolchain-ios.cmake  toolchain-macos.cmake  toolchain-windows-arm64.cmake  toolchain-windows-x64.cmake
core/include/: tracking_engine.h
core/models/: MODEL_STATUS.md  YOLO_COREML_CONVERSION.md  YOLO_MODEL_README.txt  convert_yolo_to_coreml.py  create_yolo_model.py  download_yolo_model.py
core/scripts/: build-android.sh  build-ios.sh  build-macos.sh  build-windows-arm64.bat  build-windows-x64.bat  install-deps-android.sh  install-deps-ios.sh  install-deps-macos.sh  install-deps-windows-arm64.bat  install-deps-windows-x64.bat
core/src/: tracking_engine.cpp
flutter_app/: PLATFORM_PLUGINS.md  README.md  pubspec.yaml
flutter_app/assets/: models.json
flutter_app/lib/: app.dart  main.dart
flutter_app/lib/models/: app_state.dart  calibration_data.dart  calibration_profile.dart  model_info.dart
flutter_app/lib/pages/: admin_dashboard.dart  admin_model_management.dart  calibration_page.dart  home_page.dart  login_page.dart
flutter_app/lib/services/: calibration_service.dart  camera_service.dart  data_storage.dart  model_registry.dart  tts_service.dart
flutter_app/lib/widgets/: calibration_data_overlay.dart  calibration_preview.dart  calibration_settings_dialog.dart  calibration_setup_panel.dart  camera_preview_widget.dart  camera_selection_dialog.dart  circle_test_widget.dart  countdown_overlay.dart  instructions_overlay.dart  model_card.dart  model_selection_dialog.dart  test_configuration_dialog.dart
flutter_app/macos/: Podfile  add_models.rb  add_resources.sh  copy_models.sh
flutter_app/macos/Runner/: AppDelegate.swift  CoreMLYoloDetector.swift  DebugProfile.entitlements  EyeTrackingPlugin.swift  Info.plist  MainFlutterWindow.swift  Release.entitlements  Runner-Bridging-Header.h  tracking_engine_bridge.h
flutter_app/macos/Runner.xcodeproj/: project.pbxproj  project.pbxproj.bak
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/macos/Runner/Resources/yolo11m.mlpackage/: Manifest.json
flutter_app/macos/Runner/Resources/yolo11m.mlpackage/Data/com.apple.CoreML/: model.mlmodel
flutter_app/test/: widget_test.dart
flutter_app/test/models/: calibration_profile_test.dart  model_info_test.dart
flutter_app/test/services/: model_registry_test.dart  tts_service_test.dart
python_desktop/: .gitignore  QUICKSTART.md  README.md  WINDOWS_ARM64.md  config.py  database.py  main.py  requirements.txt  run_app.bat
python_desktop/assets/models/: README.md
python_desktop/gui/: __init__.py  app.py
python_desktop/models/: __init__.py  test_session.py  tracking_result.py  user.py
python_desktop/tracking/: __init__.py  camera.py  eye_tracker.py  face_detector.py  tracking_engine.py
